methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:22: error: ';' expected but ',' found.
        case 1 => setBrushColor(Color.YELLOW),
                                             ^